fix(ui5-raiting-indicator): visual spec alignment (#12488)

--- a/packages/main/src/themes/RatingIndicator.css
+++ b/packages/main/src/themes/RatingIndicator.css
@@ -6,7 +6,7 @@
 }
 
 :host([disabled]) {
-	opacity: .4;
+	opacity: var(--sapContent_DisabledOpacity);
 	cursor: initial;
 	outline: none;
 }
@@ -94,16 +94,16 @@
 
 .ui5-rating-indicator-item [ui5-icon].ui5-rating-indicator-half-icon {
 	position: absolute;
-    inset-inline-start: 50%;
-    color: var(--sapContent_RatedColor);
+	inset-inline-start: 50%;
+	color: var(--sapContent_RatedColor);
 }
 
 .ui5-rating-indicator-half-icon-wrapper {
 	width: 100%;
-    height: 100%;
-    position: absolute;
-    inset-inline-start: -50%;
-    top: 0;
-    z-index: 32;
-    overflow: hidden;
+	height: 100%;
+	position: absolute;
+	inset-inline-start: -50%;
+	top: 0;
+	z-index: 32;
+	overflow: hidden;
 }
